--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>useing giit hub</title>
+    <style>
+        .immg{
+            height: 20%;
+            width: 30%;
+        }
+    </style>
+
 </head>
 <body>
     <h2>look mama i am useing github</h2>
     <p> onk din por ayta korta parlam</p>
     <h1>sry bhul cilo</h1>
+    <h5> try some style</h5>
+    <img src="pic.jpg"
 </body>
 </html>
