--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>useing giit hub</title>
     <style>
-        .immg{
+        img{
             height: 6%;
             width: 2%;
         }
@@ -18,6 +18,8 @@
     <p> onk din por ayta korta parlam</p>
     <h1>sry bhul cilo</h1>
     <h5> try some style</h5>
-    <img src="pic.jpg"
+    <img src="pic.jpg">
+    <h1> let do a party</h1>
+
 </body>
 </html>
