p r background r color change in my first web

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
             height: 6%;
             width: 2%;
         }
+        h1{
+            color: aqua;
+        }
+        p{
+            background-color: blue;
+            height: 10ch;
+            width: 20ch;
+        }
     </style>
 
 </head>
@@ -20,6 +28,7 @@
     <h5> try some style</h5>
     <img src="pic.jpg">
     <h1> let do a party</h1>
+    <p>tryb add something in first web</p>
 
 </body>
 </html>
